# zigbeetle-c6-temp-humidity

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
.zed/: tasks.json
ZigBeetleC6Sensor/: ZigBeetleC6Sensor.ino
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  zigbeetle_main.c
main/lp_core/: aht21b_defs.h  main.c
